@@ -5,14 +5,16 @@ AUX sdl-gfx-2.0.17-gcc43.patch 13847 RMD160 e657f3442e74efae6dbf255bd7214b3deb31
 AUX sdl-gfx-2.0.18-gcc43.patch 13847 RMD160 e657f3442e74efae6dbf255bd7214b3deb31433e SHA1 450972746eb8b29ede969dc335e717dcfb7d27d4 SHA256 84c6b04099a87dbcd2b241b2de44f2189c6db4932659ffc4b127a3e1899ea62a
 DIST SDL_gfx-2.0.17.tar.gz 844309 RMD160 8baf08699fdcbc19ae836f68f8bc2de224c955d0 SHA1 7be52033ca8f014ee7761f6f298feac8336bfa5a SHA256 d08d8477ff1c6639bc7193b76a415f996c98604600e9fa4e718fd4e9283f83f4
 DIST SDL_gfx-2.0.18.tar.gz 860005 RMD160 57cb3f7b734485cc15d30e6132f63fc59d40872e SHA1 99b5728d718c852cbb0ea973285ad81fe7d6f404 SHA256 10c93d0057fa460e3b355d86cb5dc550c75ea098769ee3768d328bff96eee8a1
+DIST SDL_gfx-2.0.19.tar.gz 1223213 RMD160 354c939e4901644b80c82e7a9e5c04b93a70306b SHA1 bba39cf83e84d8e61b8078ea095cc0a96023e27f SHA256 9c7dec6e21f84f50549110691a0088ef909c30ca183828d254217f7e11470006
 EBUILD sdl-gfx-2.0.17.ebuild 1163 RMD160 b7aaceb148eb0a0c8ff8903a0a4a5f1ef249fabd SHA1 127b8092309bb98342c7e14e11934f3a536d9dec SHA256 7a071518b6e3214af613d3a5c758c10d402b2d06f17fc2cde9b7b21fed143e69
 EBUILD sdl-gfx-2.0.18.ebuild 1229 RMD160 453b93ed71028dc75c33c01f48f120fd690e05d7 SHA1 cbc09278f621e408a0991fa489e0236e8f21626c SHA256 620b69ad3528feb6568cbcbf21006b5ca825a8dc1c3a462266643326a4cdc1fb
-MISC ChangeLog 6166 RMD160 d1ad1bcfc48df5bbe7d079b01f47bc96c2b8f4a8 SHA1 65637a8a55847bc3f9be5830614f1d3bd20c2d50 SHA256 891f39d2b130895c3b22e01170d736eb7a2bb97e25994e7753257a1de9818361
+EBUILD sdl-gfx-2.0.19.ebuild 888 RMD160 fc542d8f4c15c3bbf8f10916cd8743c8344ed67d SHA1 d4c36f90f4a5d9ffa67aa77cc1152043c0a57a79 SHA256 58805b3be769e71cf4a1bbbad580f7cdee4c97ffe15df1f2b0a04d6fbb6918d5
+MISC ChangeLog 6293 RMD160 38aa99bc5ac5dd42031f95073938b693d7c1194d SHA1 948680f4ec3208284a7aa46f976a9d1595662a41 SHA256 5c147be2eed3de589fb52ad2005b40d394c726757778121b57f0e98f2e4f42e6
 MISC metadata.xml 814 RMD160 7c27f9bb809a7e8ec09ffe500a34e787dc291398 SHA1 4f47376426cd837f96b6fee6f64fb45e98bc4131 SHA256 acfaa2ee674cddffcfa2bc9efad13e427caff8ad702b2ede75f77b8ea8910427
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAknZ2hkACgkQn/5bYzqsSmGVuQCgthqHDnaEbinw/faePDGTuBWO
-hTgAn37A6yEO4kOGVL98vH4iwGJX0xnX
-=aWPo
+iEYEARECAAYFAkocUbkACgkQdz7hIScOUREmjgCeK1jALRUQ3nK01JNclGpljwKw
+6bcAn1N7i/orDztGyXWb7OqW+xiJOWVm
+=IVp/
 -----END PGP SIGNATURE-----
